--- a/photos.html
+++ b/photos.html
@@ -30,6 +30,7 @@
 				></div>
             <h3 style="padding-left: 5px">Daniel Zheng</h3>
 				<img class="small-pic" src="photos/6.jpg" />
+				<img class="small-pic" src="photos/5.jpg" />
 				<img class="small-pic" src="photos/7.jpg" />
 				<img class="small-pic" src="photos/9.jpg" />
 			</div>
