--- a/photos.html
+++ b/photos.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
 	<head>
 		<meta charset="utf-8" />
@@ -13,22 +9,13 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<!--[if lt IE 7]>
-			<p class="browsehappy">
-				You are using an <strong>outdated</strong> browser. Please
-				<a href="#">upgrade your browser</a> to improve your experience.
-			</p>
-		<![endif]-->
-
-		<script src="" async defer></script>
 		<div class="container">
 			<div class="pictures">
 				<div
-					style="height: 88px"
 					aria-hidden="true"
 					class="wp-block-spacer"
 				></div>
-            <h3 style="padding-left: 5px">Daniel Zheng</h3>
+            <h3 class="gallery-header">Daniel Zheng</h3>
 				<img class="small-pic" src="photos/6.jpg" />
 				<img class="small-pic" src="photos/5.jpg" />
 				<img class="small-pic" src="photos/7.jpg" />
