--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
 	<head>
 		<meta charset="utf-8" />
@@ -13,16 +9,9 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<!--[if lt IE 7]>
-			<p class="browsehappy">
-				You are using an <strong>outdated</strong> browser. Please
-				<a href="#">upgrade your browser</a> to improve your experience.
-			</p>
-		<![endif]-->
 		<div class="container">
 			<div class="content">
 				<div
-					style="height: 88px"
 					aria-hidden="true"
 					class="wp-block-spacer"
 				></div>
@@ -30,7 +19,7 @@
 				<p class="has-text-align-left">
 					software engineer @google
 				</p>
-				<p style="line-height: 1.4em">
+				<p class="projects-and-photos">
 					<a>
 						<mark><strong>projects</strong></mark>
 					</a>
@@ -52,6 +41,5 @@
 				</p>
 			</div>
 		</div>
-		<script src="" async defer></script>
 	</body>
 </html>
